[tool.poetry]
name = "tsg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sendgrid = "^6.8.2"
requests = "^2.26.0"
markdown2 = "^2.4.1"
rq = "^1.10.0"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
